--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,11 @@ body {
     width: 215px;
     background-color: #2a2f4d;
     border: 3px solid #2a2f4d;
-
+    border-radius: 3px;
+    box-shadow: 50px black;
+    -webkit-box-shadow: 0px 0px 28px 4px rgba(0,0,0,0.73);
+    -moz-box-shadow: 0px 0px 28px 4px rgba(0,0,0,0.73);
+    box-shadow: 0px 0px 28px 4px rgba(0,0,0,0.73);
 }
 
 #inputs {
@@ -37,25 +41,31 @@ button {
     height: 50px;
     background: none;
     border: none;
+    font-size: large;
 }
 
 .utility-button {
     background-color: #4e546d;
+    color: #a53b64;
 }
 
 .main-button {
     background-color: #3b3e5d;
+    color: #fcfefe ;
 }
 
 #calculum-info {
     background: #3b3e5d;
     border: none;
     width: 215px;
-    margin-bottom: 10px;
+    margin-bottom: 3px;
+    height: 100px;
 }
 
-#equal-button {
+#equal-button
+.equal-button {
     width: 50px;
     height: 50px;
     background-color: #ff3665;
+    color: #fcfefe;
 }
