--- a/styles/style.css
+++ b/styles/style.css
@@ -6,12 +6,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+}
 
+footer {
+    margin-top: 10px;
 }
 
 #calculator {
     display: flex;
+   
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
