--- a/styles/style.css
+++ b/styles/style.css
@@ -1,118 +1,15 @@
 body {
-    background-color: #747b98;
-    max-width: 1280px;
+    width: 100vw;
     min-height: 100vh;
-    margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: center;
+    background-color: #E5E5E5;
 }
 
-footer {
-    margin-top: 10px;
+.calculator {
+    width: 356px;
+    height: 566px;
+    background-color: #2D2A37;
+    border-radius: 48px;
 }
-
-#calculator {
-    display: flex;
-   
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 215px;
-    background-color: #2a2f4d;
-    border: 3px solid #2a2f4d;
-    border-radius: 3px;
-    box-shadow: 50px black;
-    -webkit-box-shadow: 0px 0px 28px 4px rgba(0,0,0,0.73);
-    -moz-box-shadow: 0px 0px 28px 4px rgba(0,0,0,0.73);
-    box-shadow: 0px 0px 28px 4px rgba(0,0,0,0.73);
-}
-
-#inputs {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 3px;
-}
-
-
-
-.utility-button,
-.main-button, 
-button {
-    width: 50px;
-    height: 50px;
-    background: none;
-    border: none;
-    font-size: large;
-}
-
-.utility-button {
-    background-color: #4e546d;
-    color: #a53b64;
-}
-
-.main-button {
-    background-color: #3b3e5d;
-    color: #fcfefe ;
-}
-
-#calculum-info {
-    background: #3b3e5d;
-    border: none;
-    width: 215px;
-    margin-bottom: 3px;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding: 10px;
-}
-
-#equal-button
-.equal-button {
-    width: 50px;
-    height: 50px;
-    background-color: #ff3665;
-    color: #fcfefe;
-}
-
-
-button:hover,
-#equal:hover {
-    background-color: rgb(173, 173, 173);
-    cursor: pointer;
-}
-
-
-#calculum-history {
-    color: #8287a1;
-    width: 100%;
-    text-align: end;
-}
-
-#operation-now, 
-#number-now {
-    color: #fcfefe;
-}
-
-#operation-now {
-    font-size: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-#number-now {
-    font-size: 35px;
-}
-
-#calculum-now {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
