--- a/styles/style.css
+++ b/styles/style.css
@@ -12,4 +12,41 @@ body {
     height: 566px;
     background-color: #2D2A37;
     border-radius: 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+
+.calculums {
+    width: 288px;
+}
+
+.buttons {
+    width: 292px;
+    height: 368px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+button {
+    width: 64px;
+    height: 64px;
+    border-radius: 999px;
+    border: none;
+}
+
+.normal-btn {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.05)), #2D2A37;
+    box-shadow: 0px 11px 7px rgba(0, 0, 0, 0.01), 
+    0px 7px 7px rgba(0, 0, 0, 0.04), 
+    0px 4px 6px rgba(0, 0, 0, 0.1), 
+    0px 2px 4px rgba(0, 0, 0, 0.26), 
+    0px 0px 2px rgba(0, 0, 0, 0.29), 
+    inset 0px 2px 3px rgba(255, 255, 255, 0.06);
+    color: white;
 }
